--- a/src/app/display/display.component.html
+++ b/src/app/display/display.component.html
@@ -26,7 +26,7 @@ My int is {{int}}
         {{data.CustomerName}}
      </td>
      <td>
-        {{data.Adress}}
+        {{data.Adresss}}
      </td>
      <td>
         {{data.phoneNumber}}
